Fix width, I rly need to get someone to fix the CSS spacing

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,4 +1,4 @@
-@media (min-width: 320pt) {
+@media (max-width: 720pt) {
 
 	p {
 		width: 100%;
